fix: the message is out of the screen

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
 
 .container {
     position: absolute;
-    top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,9 +32,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 100px;
+    gap: 20px;
     width: 80%;
-    height: 500px;
+    height: auto;
     margin: auto;
 }
 
@@ -45,7 +44,7 @@ body {
     justify-content: center;
     width: 50%;
     height: 10%;
-    gap: 30px;
+    gap: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
@@ -77,7 +76,7 @@ img {
 
 #message {
     font-family: monospace;
-    font-size: 2rem;
+    font-size: 1.6rem;
     color: var(--main-border-color);
 }
 
